--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ a {
 
 #display {
     margin: 0 10px;
-    height: 150px;
+    height: 120px;
     width: auto;
     max-width: 270px;
     display: flex;
@@ -113,6 +113,10 @@ button#equal {
     height: 130px;
 }
 
+button#cero {
+    width: 130px;
+}
+
 /* tono claro */
 
 .calculator {
@@ -123,6 +127,11 @@ button#equal {
     color: #0a1e23;
 }
 
+.calculator button {
+    background-color: #071115;
+    color: #fff;
+}
+
   /* tono oscuro */
 
 .calculator.dark {
@@ -131,4 +140,9 @@ button#equal {
 
 .calculator.dark #display {
     color: #f8fafb;
+}
+
+.calculator.dark button {
+    background-color: #fff;
+    color: #071115;
 }
