--- a/style.css
+++ b/style.css
@@ -113,8 +113,11 @@ button#equal {
     height: 130px;
 }
 
-button#cero {
-    width: 130px;
+.notas {
+    font-weight: bold;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    text-align: left;
 }
 
 /* tono claro */
